# coreason-maco

./: .pre-commit-config.yaml  AGENTS.md  COMPLIANCE_REPORT.md  Dockerfile  README.md  VIGNETTE.md  controller.py  manual_test_real.py  mkdocs.yml  pyproject.toml  requirements.txt
docs/: core_concepts_maco_vs_agents.md  coreason-manifest-integration.md  index.md  product_requirements.md  recipe_manifest.md
docs/proposals/: manifest_v0.10.0_RFC.md
src/: main.py
src/coreason_api/: main.py
src/coreason_api/utils/: logger.py
src/coreason_maco/: __init__.py  client.py  main.py  server.py  services.py
src/coreason_maco/core/: controller.py  interfaces.py  manifest.py  registry.py
src/coreason_maco/domain/: tools.py
src/coreason_maco/engine/: handlers.py  resolver.py  runner.py  topology.py
src/coreason_maco/events/: factory.py  protocol.py  sink.py
src/coreason_maco/infrastructure/: cortex_adapter.py  remote_mcp_adapter.py  server_defaults.py
src/coreason_maco/strategies/: council.py
src/coreason_maco/utils/: __init__.py  context.py
src/coreason_manifest/: __init__.py  recipes.py
tests/: conftest.py  test_complex_lifespan.py  test_complex_workflow.py  test_coverage_gap.py  test_edge_cases.py  test_events.py  test_handlers.py  test_infrastructure.py  test_logger.py  test_main.py  test_recipes.py  test_recipes_edge_cases.py  test_scaffolding.py  test_server.py  test_services.py  test_sink.py  test_utils.py
tests/complex/: test_complex_v9_workflows.py
tests/core/: test_manifest_schema.py
tests/edge_cases/: test_manifest_v9_edge_cases.py
tests/events/: test_payload_models.py  test_payload_models_extended.py  test_protocol.py  test_protocol_edge_complex.py
tests/integration/: test_context_propagation_complex.py  test_resume_logic.py  test_runner_council.py  test_runner_council_edge_cases.py  test_server.py  test_server_complex.py  test_server_edge_cases.py  test_server_error.py  test_workflow_dot_notation.py
tests/unit/: test_audit_logging.py  test_client.py  test_conditional_jinja.py  test_controller.py  test_controller_audit_edge_cases.py  test_controller_resume.py  test_council.py  test_dynamic_routing.py  test_dynamic_routing_complex.py  test_dynamic_routing_edge_cases.py  test_edge_events_advanced.py  test_edge_events_complex.py  test_feedback_manager.py  test_human_node.py  test_llm_council_delegation.py  test_node_init_edge_cases.py  test_public_api.py  test_resolver_dot_notation.py  test_resolver_edge_cases.py  test_runner.py  test_runner_agent_response.py  test_runner_agent_response_edge_cases.py  test_runner_concurrency.py  test_runner_concurrency_edge_cases.py  test_runner_council_integration.py  test_runner_edge_events.py  test_runner_error_handling.py  test_runner_injection_edge_cases.py  test_runner_inputs.py  test_runner_llm_injection.py  test_runner_resume.py  test_runner_tool.py  test_runner_tool_complex.py  test_security_sanitization_comprehensive.py  test_streaming.py  test_streaming_edge_cases.py  test_tool_artifacts.py  test_topology.py  test_topology_builder.py  test_utils_logger.py
