[tool.poetry]
name = "coreason-api"
version = "0.1.0"
description = "Coreason API - The Central Nervous System"
authors = ["Gowtham A Rao <gowtham.rao@coreason.ai>"]
license = "Prosperity-3.0"
readme = "README.md"
packages = [
    {include = "core", from = "src"},
    {include = "dependencies", from = "src"},
    {include = "routers", from = "src"},
    {include = "services", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.12, <3.15"
loguru = "^0.7.2"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
redis = "*"
sse-starlette = "*"
pydantic-settings = "*"
coreason-cortex = "*"
coreason-identity = "*"
coreason-veritas = "*"
coreason-vault = "*"
# coreason-maco = "*" # FIXME: Package 'coreason-maco' is currently unavailable on PyPI.
coreason-manifest = "*"
coreason-foundry = "*"
coreason-graph-nexus = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.8"
pre-commit = "^3.7.1"
pytest-cov = "^5.0.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.26"
pytest-asyncio = "*"
httpx = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "coreason-api"
version = "0.1.0"
description = "Coreason API - The Central Nervous System"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Gowtham A Rao", email = "gowtham.rao@coreason.ai" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/CoReason-AI/coreason-api"
Repository = "https://github.com/CoReason-AI/coreason-api"
Documentation = "https://github.com/CoReason-AI/coreason-api"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["tests/*"]
