[tool.poetry]
name = "coreason_api"
version = "0.1.0"
description = "CoReason Middleware Host"
authors = ["Gowtham A Rao <gowtham.rao@coreason.ai>"]
license = "Prosperity-3.0"
readme = "README.md"
packages = [{include = "coreason_api", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11, <3.15"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
redis = "*"
sse-starlette = "*"
pydantic-settings = "*"
coreason-cortex = "*"
coreason-identity = "*"
coreason-veritas = "*"
coreason-vault = "*"
coreason-maco = "*"
coreason-manifest = "*"
coreason-foundry = "*"
coreason-graph-nexus = "*"
loguru = "^0.7.2"
pydantic = "^2.0"
anyio = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.8"
pre-commit = "^3.7.1"
pytest-cov = "^5.0.0"
pytest-asyncio = "*"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.26"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "coreason_api"
version = "0.1.0"
description = "CoReason Middleware Host"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Gowtham A Rao", email = "gowtham.rao@coreason.ai" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
asyncio_mode = "auto"
